--- a/app/windows10-components/Desktop.module.css
+++ b/app/windows10-components/Desktop.module.css
@@ -14,7 +14,7 @@
   padding: 20px;
   max-width: 600px;
   position: absolute;
-  z-index: 1;
+  z-index: 5;
 }
 
 /* Mobile responsive styles */
